tests/paczka1/small_fuzzy/75700399.err
Error in line 1: oFQcik9CGd A266 75,4
Error in line 7: oFQcik9CGd S360 218,46
